# internal/booking/api/generated/go/api_default.go
@@ -13,6 +13,7 @@ package openapi
 import (
 	"net/http"
 	"strings"
+	"time"
 
 	"github.com/gorilla/mux"
 )
@@ -60,6 +61,11 @@ func (c *DefaultAPIController) Routes() Routes {
 			"/booked-rooms/{hotel_id}",
 			c.GetBookedRooms,
 		},
+		"BookRoomRoomIdPost": Route{
+			strings.ToUpper("Post"),
+			"/book-room/{room_id}",
+			c.BookRoomRoomIdPost,
+		},
 	}
 }
 
@@ -90,6 +96,64 @@ func (c *DefaultAPIController) GetBookedRooms(w http.ResponseWriter, r *http.Req
 		return
 	}
 	result, err := c.service.GetBookedRooms(r.Context(), hotelIdParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	_ = EncodeJSONResponse(result.Body, &result.Code, w)
+}
+
+// BookRoomRoomIdPost - Book a room by ID
+func (c *DefaultAPIController) BookRoomRoomIdPost(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	query, err := parseQuery(r.URL.RawQuery)
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	roomIdParam := params["room_id"]
+	if roomIdParam == "" {
+		c.errorHandler(w, r, &RequiredError{"room_id"}, nil)
+		return
+	}
+	var entryParam time.Time
+	if query.Has("Entry"){
+		param, err := parseTime(query.Get("Entry"))
+		if err != nil {
+			c.errorHandler(w, r, &ParsingError{Param: "Entry", Err: err}, nil)
+			return
+		}
+
+		entryParam = param
+	} else {
+		c.errorHandler(w, r, &RequiredError{"Entry"}, nil)
+		return
+	}
+	var exitParam time.Time
+	if query.Has("Exit"){
+		param, err := parseTime(query.Get("Exit"))
+		if err != nil {
+			c.errorHandler(w, r, &ParsingError{Param: "Exit", Err: err}, nil)
+			return
+		}
+
+		exitParam = param
+	} else {
+		c.errorHandler(w, r, &RequiredError{"Exit"}, nil)
+		return
+	}
+	var emailParam string
+	if query.Has("Email") {
+		param := query.Get("Email")
+
+		emailParam = param
+	} else {
+		c.errorHandler(w, r, &RequiredError{Field: "Email"}, nil)
+		return
+	}
+	result, err := c.service.BookRoomRoomIdPost(r.Context(), roomIdParam, entryParam, exitParam, emailParam)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		c.errorHandler(w, r, err, &result)
