# internal/booking/api/generated/go/api_default_service.go
@@ -15,6 +15,7 @@ import (
 	"github.com/k33pup/Booking.git/internal/booking/usecases"
 	"net/http"
 	"errors"
+	"time"
 )
 
 // DefaultAPIService is a service that implements the logic for the DefaultAPIServicer
@@ -28,6 +29,7 @@ type DefaultAPIService struct {
 func NewDefaultAPIService(useCase usecases.IBookedRoomRepository) *DefaultAPIService {
 	return &DefaultAPIService{useCase}
 }
+
 
 // GetUnbookedRooms - Получить список свободных комнат по ID отеля
 func (s *DefaultAPIService) GetUnbookedRooms(ctx context.Context, hotelId string) (ImplResponse, error) {
@@ -61,4 +63,21 @@ func (s *DefaultAPIService) GetBookedRooms(ctx context.Context, hotelId string) 
 	// return Response(500, nil),nil
 
 	return Response(http.StatusNotImplemented, nil), errors.New("GetBookedRooms method not implemented")
+}
+
+// BookRoomRoomIdPost - Book a room by ID
+func (s *DefaultAPIService) BookRoomRoomIdPost(ctx context.Context, roomId string, entry time.Time, exit time.Time, email string) (ImplResponse, error) {
+	// TODO - update BookRoomRoomIdPost with the required logic for this service method.
+	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	// TODO: Uncomment the next line to return response Response(201, BookedRoom{}) or use other options such as http.Ok ...
+	// return Response(201, BookedRoom{}), nil
+
+	// TODO: Uncomment the next line to return response Response(400, {}) or use other options such as http.Ok ...
+	// return Response(400, nil),nil
+
+	// TODO: Uncomment the next line to return response Response(404, {}) or use other options such as http.Ok ...
+	// return Response(404, nil),nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("BookRoomRoomIdPost method not implemented")
 }
